[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "run-notebook"
version = "0.1.0"
description = "A tool to run Jupyter notebooks as Python scripts"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]

[project.scripts]
run-notebook = "run_notebook.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["run_notebook"]